# llvm

./: .gitignore  add-mtp_372.ll  env-cnrt.sh
buildbot/: configure.py  dependency.py
clang/: CMakeLists.txt
clang/include/clang/: module.modulemap
clang/lib/AST/: ASTContext.cpp  Decl.cpp
clang/lib/Basic/: CMakeLists.txt  Cuda.cpp  MLISA.cpp  Targets.cpp
clang/lib/CodeGen/: CGBuiltin.cpp  CGCall.cpp  CGGPUBuiltin.cpp  CGOpenMPRuntime.cpp  CodeGenFunction.h  TargetInfo.cpp
clang/lib/Driver/: Action.cpp  CMakeLists.txt  Compilation.cpp  Driver.cpp  SanitizerArgs.cpp  ToolChain.cpp  Types.cpp
clang/lib/Frontend/: CompilerInvocation.cpp  InitPreprocessor.cpp
clang/lib/Headers/: __clang_cuda_device_functions.h  __clang_cuda_runtime_wrapper.h  opencl-c.h
clang/lib/Sema/: OpenCLBuiltins.td  SPIRVBuiltins.td  SemaSYCL.cpp
clang/tools/clang-linker-wrapper/: ClangLinkerWrapper.cpp  OffloadWrapper.cpp  OffloadWrapper.h
libc/: CMakeLists.txt
libclc/: .gitignore  CMakeLists.txt  build_mlisa.sh
libclc/cmake/modules/: AddLibclc.cmake  HandleInLLVMTree.cmake  HandleOutOfTreeLLVM.cmake
libclc/generic/lib/: SOURCES
libclc/generic/libspirv/: SOURCES
libclc/mlisa/libspirv/: SOURCES
libclc/ptx-nvidiacl/libspirv/: SOURCES
libclc/spirv/lib/: SOURCES
libclc/utils/: CMakeLists.txt
libclc/utils/libclc-remangler/: LibclcRemangler.cpp
libdevice/cmake/modules/: SYCLLibdevice.cmake
llvm/: CMakeLists.txt
llvm-spirv/: CMakeLists.txt
llvm/lib/Analysis/: TargetLibraryInfo.cpp
llvm/lib/IR/: Function.cpp
llvm/lib/Object/: OffloadBinary.cpp
llvm/tools/opt/: opt.cpp
opencl/: CMakeLists.txt
sycl/: CMakeLists.txt
sycl/plugins/: CMakeLists.txt
sycl/plugins/cnrt/: CMakeLists.txt  pi_cnrt.cpp  pi_cnrt.hpp
sycl/source/: handler.cpp
(+81 files in other folders)
